<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>47</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz.jmockit</groupId>
    <artifactId>jmockit-parent</artifactId>
    <version>1.54.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>jmockit-parent</name>
    <description>Parent POM for JMOCKIT</description>

    <licenses>
        <license>
            <name>The MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <modules>
        <module>coverageTests</module>
        <module>main</module>
        <module>samples</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/hazendaz/jmockit1</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/jmockit1.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/hazendaz/jmockit1</url>
    </scm>

    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>gh-pages-scm</name>
            <url>scm:git:ssh://git@github.com/hazendaz/jmockit1.git</url>
        </site>
    </distributionManagement>

    <properties>
        <!-- Maven compiler options -->
        <java.version>11</java.version>
        <java.release.version>11</java.release.version>
        <!-- Set on purpose as this repo will fail if moved up to 11 currently for anything < jdk 13 -->
        <javadoc.java.release.version>8</javadoc.java.release.version>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1717174187</project.build.outputTimestamp>

        <!-- Automatic Module Name -->
        <module.name>com.github.hazendaz.jmockit.parent</module.name>

        <!-- Surefire Argline -->
        <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/1.54.0/jmockit-1.54.0.jar</argLine>

        <!-- Override jacoco plugin to latest -->
        <jacoco.plugin>0.8.12</jacoco.plugin>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>3.46.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>4.8.6</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.code.findbugs</groupId>
                    <artifactId>jsr305</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>jdk17on</id>
            <activation>
                <jdk>[17,)</jdk>
            </activation>
            <properties>
                <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/1.54.0/jmockit-1.54.0.jar --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                <!-- Javadoc Release is strict due to maven bug and automatic module naming; it needs extra help, see examples (note: done on jdk 17 only as broken until jdk 13 and not backported) -->
                <javadoc.java.release.version>11</javadoc.java.release.version>
            </properties>
        </profile>
    </profiles>

</project>
